fix mobile layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,10 +179,16 @@ p {
     width: calc(100% - 36px);
     max-width: 408px;
     min-height: 576px;
-    padding: 72px 24px 24px;
+    padding: 64px 16px 16px;
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        padding: 72px 24px 24px;
+    }
 }
 
 .modal-close-button {
@@ -565,7 +571,6 @@ header {
 }
 
 .mobile-menu-close-button {
-    top: -64px;
     background-color: transparent;
 }
 
@@ -1010,7 +1015,21 @@ only screen and (min-width: 1158px) and (min-resolution: 2dppx) {
 
 @media screen and (min-width: 1158px) {
     .studio-item-header {
-        font-size: 36px;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+}
+
+.studio-item-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 1158px) {
+    .studio-item-text {
+        font-size: 16px;
         line-height: 1.11;
     }
 }
